--- a/Prueba2/pom.xml
+++ b/Prueba2/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version> <!-- Utiliza la versión adecuada -->
         </dependency>
+        <dependency>
+            <groupId>io.github.jpenren</groupId>
+            <artifactId>thymeleaf-spring-data-dialect</artifactId>
+            <version>3.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
